--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -50,6 +50,10 @@
     width: 40px;
 }
 
+#page-header {
+    margin-bottom: 1rem;
+}
+
 #page-content-wrapper {
     width: 100%;
     height: 100%;
