--- a/templates/archives.html
+++ b/templates/archives.html
@@ -4,7 +4,7 @@
 {% block precontent %}
 <div class="row">
     <div class="col-lg-9">
-        <header class="page-header">
+        <header id="page-header">
             <h1>Archive</h1>
         </header>
     </div>
