--- a/templates/category.html
+++ b/templates/category.html
@@ -10,7 +10,7 @@
 {% block precontent %}
 <div class="row">
     <div class="col-lg-9">
-        <header class="page-header">
+        <header id="page-header">
             <h1>Articles in {{ category }}</h1>
         </header>
     </div>
