--- a/templates/page.html
+++ b/templates/page.html
@@ -49,7 +49,7 @@
 <div class="row">
     <div class="col-lg-9">
         <section id="content" class="body">
-            <h1 class="page-header">{{ page.title }}</h1>
+            <h1 id="page-header">{{ page.title }}</h1>
             <div class="entry-content">
                 {{ page.content }}
             </div>
