--- a/templates/tag.html
+++ b/templates/tag.html
@@ -9,7 +9,7 @@
 {% block precontent %}
 <div class="row">
     <div class="col-lg-9">
-        <header class="page-header">
+        <header id="page-header">
             <h1>Articles featuring {{ tag }}</h1>
         </header>
     </div>
