--- a/templates/include/article_info.html
+++ b/templates/include/article_info.html
@@ -1,6 +1,7 @@
 <div class="post-info">
     <div class="publish-info-block">
         <small>
+            <span class="author">{{ article.author }}</span>
             <span class="published">
                 <i class="fa fa-calendar padding-small"></i><time datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}</time>
             </span>
