--- a/templates/base.html
+++ b/templates/base.html
@@ -85,228 +85,7 @@
 <body data-spy="scroll" data-target="#scrollspy">
     <div id="wrapper">
         <!-- Sidebar -->
-        <div id="sidebar-wrapper-small" class="twitchy-background">
-            <ul id="accordion-small" class="sidebar-nav sidebar-nav-small">
-                {{ nav_small_li(SITEURL, SITENAME, '<span class="fas fa-home"></span>') }}
-                <li class="nav-divider"></li>
-                {{ nav_small_li(SITEURL + '/' + ARCHIVES_URL | default('archives.html'), 'Recent Articles', '<span class="fas fa-th-list"></span>') }}
-                {% if SHARE %}
-                <li class="nav-divider"></li>
-                <li id="share-small">
-                    <a data-toggle="collapse" data-parent="#accordion-small" href="#collapse-share-small" title="Share" class="collapsed">
-                        <i class="fas fa-share-alt padding-small"></i>
-                    </a>
-                </li>
-                <li class="panel anti-panel"><ul id="collapse-share-small" class="collapse {% block collapse_share_small %}{% endblock %}">
-                    <li>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u={{share_url}}" title="Share via Facebook" target="popup">
-                            <i class="fas fa-facebook-square padding-small"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/share?url={{share_url}}" title="Share via Google+" target="popup">
-                            <i class="fas fa-google-plus padding-small"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" title="Share via Twitter" target="popup">
-                            <i class="fas fa-twitter-square padding-small"></i>
-                        </a>
-                    </li>
-                </ul></li>
-                {% endif %}
-                {% if SOCIAL %}
-                <li class="nav-divider"></li>
-                <li>
-                    <a data-toggle="collapse" data-parent="#accordion-small" href="#collapse-social-small" title="Social" class="collapsed">
-                        <i class="fas fa-users padding-small"></i>
-                    </a>
-                </li>
-                <li class="panel anti-panel"><ul id="collapse-social-small" class="collapse {% block collapse_social_small %}{% endblock %}">
-                {% for name, link in SOCIAL|sort(attribute='0') %}
-                    <li>
-                        <a href="{{ link }}" title="{{name}}"><i class="{{get_icon_attributes(name|striptags|trim)}} padding-small"></i></a>
-                    </li>
-                {% endfor %}
-                </ul></li>
-                {% endif %}
-                <li class="nav-divider"></li>
-                {{ nav_small_li('#', 'Back to top', '<span class="fas fa-arrow-up"></span>') }}
-            </ul>
-        </div>
-        <div id="sidebar-wrapper" class="twitchy-background">
-            <ul id="accordion" class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="{{ SITEURL }}/">
-                        {% if SITELOGO %}<img src="{{ SITEURL }}/{{ SITELOGO }}" width="{{ SITELOGO_SIZE }}" alt="Sitelogo"/> {% endif %}
-                        {% if not HIDE_SITENAME %}
-                            <span class="fas fa-home padding-small"></span>
-                            {{ SITENAME }}
-                        {% endif %}
-                    </a>
-                </li>
-                {% if DISPLAY_RECENT_POSTS_ON_MENU %}
-                    <li class="nav-divider"></li>
-                    <li>
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse-latest">
-                            <span class="fas fa-th-list padding-small"></span>
-                            Recent Articles
-                        </a>
-                    </li>
-                    <li class="panel anti-panel"><ul id="collapse-latest" class="sidebar_submenu collapse {% block collapse_latest %}{% endblock %}">
-                    {% for a in (all_articles if all_articles else articles)[:RECENT_POST_COUNT] %}
-                        <li class="{% if a == article %}active{% endif %}">
-                            <a class="hide-overflow" href="{{ SITEURL }}/{{ a.url }}" title="{{ a.title|striptags|trim }}">
-                                <i class="fas fa-file-alt padding-small"></i>
-                                {{ a.title | striptags | trim }}
-                            </a>
-                        </li>
-                    {% endfor %}
-                    <li>
-                        <a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">
-                            <i class="fas fa-arrow-right padding-small"></i>
-                            More
-                        </a>
-                    </li>
-                    </ul></li>
-                {% else %}
-                    <li>
-                        <a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">
-                            <span class="fas fa-th-list padding-small"></span>
-                            Recent Articles
-                        </a>
-                    </li>
-                {% endif %}
-                {% if SHARE %}
-                <li class="nav-divider"></li>
-                <li id="share">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-share" title="Share" class="collapsed">
-                        <i class="fas fa-share-alt padding-small"></i>
-                        Share
-                    </a>
-                </li>
-                <li class="panel anti-panel"><ul id="collapse-share" class="sidebar_submenu collapse {% block collapse_share %}{% endblock %}">
-                    <li>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u={{share_url}}" target="popup">
-                            <i class="fab fa-facebook-square padding-small"></i>
-                            Facebook
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/share?url={{share_url}}" target="popup">
-                            <i class="fab fa-google-plus-square padding-small"></i>
-                            Google+
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" target="popup">
-                            <i class="fab fa-twitter-square padding-small"></i>
-                            Twitter
-                        </a>
-                    </li>
-                </ul></li>
-                {% endif %}
-                {% if SOCIAL %}
-                <li class="nav-divider"></li>
-                <li>
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-social">
-                        <i class="fas fa-users padding-small"></i>
-                        Contact
-                    </a>
-                </li>
-                <li class="panel anti-panel"><ul id="collapse-social" class="sidebar_submenu collapse {% block collapse_social %}{% endblock %}">
-                    {% for name, link in SOCIAL|sort(attribute='0') %}
-                    <li>
-                        <a href="{{ link }}" title="{{name|striptags|trim}}">
-                            <i class="{{get_icon_attributes(name|striptags|trim)}} padding-small"></i>
-                            {{ name }}
-                        </a>
-                    </li>
-                    {% endfor %}
-                </ul></li>
-                {% endif %}
-                {% for title, link in MENUITEMS %}
-                {% if loop.first%}
-                <li class="nav-divider"></li>
-                {% endif %}
-                <li>
-                    <a href="{{ link }}">
-                        {{ title }}
-                    </a>
-                </li>
-                {% endfor %}
-                
-                {% if DISPLAY_PAGES_ON_MENU %}
-                <li class="nav-divider"></li>
-                <li>
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-pages">
-                        <i class="fas fa-folder-open padding-small"></i>
-                        Pages
-                    </a>
-                </li>
-                <li class="panel anti-panel"><ul id="collapse-pages" class="sidebar_submenu collapse {% block collapse_pages %}{% endblock %}">
-                    {% for p in pages %}
-                    <li{% if p == page %} class="active"{% endif %}>
-                        <a href="{{ SITEURL }}/{{ p.url }}">
-                            <i class="fas fa-file-alt padding-small"></i>
-                            {{ p.menulabel|default(p.title) }}
-                        </a>
-                    </li>
-                    {% endfor %}
-                </ul></li>
-                {% endif %}
-                {% if DISPLAY_CATEGORIES_ON_MENU %}
-                <li class="nav-divider"></li>
-                <li>
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-categories">
-                        <i class="fas fa-folder-open padding-small"></i>
-                        Categories
-                    </a>
-                </li>
-                <li class="panel anti-panel"><ul id="collapse-categories" class="sidebar_submenu collapse {% block collapse_categories %}{% endblock %}">
-                    {% for cat, articles in categories %}
-                    <li {% if cat == category %}class="active"{% endif %}>
-                        <a href="{{ SITEURL }}/{{ cat.url }}">
-                            <i class="fas fa-folder-open padding-small"></i>
-                            {{ cat }}
-                            <span class="badge badge-secondary float-right categorybadge">{{ articles|count }}</span>
-                        </a>
-                    </li>
-                    {% endfor %}
-                </ul></li>
-                {% endif %}
-                {% if DISPLAY_TAGS_ON_MENU %}
-                    {% if DISPLAY_TAGS_INLINE %}
-                        {% set tags_list = tag_cloud | sort(attribute='0') %}
-                    {% else %}
-                        {% set tags_list = tag_cloud | sort(attribute='1') %}
-                    {% endif %}
-                <li class="nav-divider"></li>
-                <li>
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-tags">
-                        <i class="fas fa-tags padding-small"></i>
-                        Tags
-                    </a>
-                </li>
-                <li class="panel anti-panel"><ul id="collapse-tags" class="sidebar_submenu collapse {% block collapse_tags %}{% endblock %}">
-                    {% for tag in tags_list %}
-                    <li class="tag-{{ tag.1 }}">
-                        <a href="{{ SITEURL }}/{{ tag.0.url }}">
-                            {{ tag.0 }}
-                        </a>
-                    </li>
-                    {% endfor %}
-                </ul></li>
-                {% endif %}
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
-        <!-- open/close sidebar -->
-        <a href="#menu-toggle" class="btn btn-primary" id="menu-toggle">
-            <span id="right-arrow" class="fas fa-chevron-right"  title="expand sidebar"></span>
-            <span id="left-arrow" class="fas fa-chevron-left" title="minimize sidebar"></span>
-        </a>
-       <!-- /open/close sidebar -->
+        {% include "include/sidebar.html" %}
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
