Add body classes for easier differentiated styling

--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,4 +1,6 @@
 {% extends "include/article_list.html" %}
+{% set body_class = 'archives' %}
+
 {% block title %}Recent Articles - {{ SITENAME }}{% endblock %}
 
 {% block precontent %}
