--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% set body_class = 'front_page' %}
+
 {% block title %}{{ SITENAME }}{% endblock %}
 
 {% block canonical_rel %}
