--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% set body_class = 'page' %}
+
 {% block title %}{{ page.title }} - {{ SITENAME }}{% endblock %}
 {% block html_lang %}{{ page.lang }}{% endblock %}
 {% block meta %}
