--- a/templates/article.html
+++ b/templates/article.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set body_class = 'article' %}
 
 {% block title %}{{ article.title|striptags }} - {{ SITENAME }}{% endblock %}
 {% block html_lang %}{{ article.lang }}{% endblock %}
