--- a/templates/include/article_list.html
+++ b/templates/include/article_list.html
@@ -7,7 +7,8 @@
         {% for article in (articles_page.object_list if articles_page else articles) %}
             <article>
                 <h4>
-                    <time datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}</time>
+                    <time datetime="{{ article.date.isoformat() }}"> {{ article.date.isoformat()[:10] }}</time>
+                    -
                     <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
                 </h4>
             </article>
