--- a/templates/article.html
+++ b/templates/article.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% set body_class = 'article' %}
+{% if article.status|lower == "draft" %}
+    {% set body_class = 'article draft' %}
+{% endif %}
 
 {% block title %}{{ article.title|striptags }} - {{ SITENAME }}{% endblock %}
 {% block html_lang %}{{ article.lang }}{% endblock %}
@@ -45,6 +48,9 @@
         </div>
         <div class="row">
             <div class="col-lg-9">
+                {% if article.status|lower == "draft" %}
+                    <div id="draft-notice">Draft article. Please do not distribute.</div>
+                {% endif %}
                 <div class="entry-content">
                     {{ article.content }}
                 </div>
